[project]
name = "sshping"
version = "0.1.0"
description = "SSH authentication testing tool - ping-style SSH connection tester"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.5.0",
    "rich>=13.9.4",
]

[project.urls]
Repository = "https://nrtn.dev/catalyst/sshping.git"

[project.scripts]
sshping = "sshping:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
